@startuml

' Stilregeln
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam ArrowColor #444444
skinparam linetype ortho

skinparam class {
    BorderColor #4527A0
    HeaderBackgroundColor #E1D5E7
}

' Hauptklasse
class Main {
    --
    +{static} main(args: String[]) : void
    -run(filePath: String) : void
}

' Algorithmen-Package
package "Algorithmen" {
    interface Algorithmus {
        --
        +algorithmus(dto: DataStructure) : DataStructure
        +hatKollision(dto: DataStructure) : boolean
        +istZeitueberlappend(startHin: int, endeHin: int, startRueck: int, endeRueck: int) : boolean
    }

    class EinfachAlg {
        --
        +algorithmus(dto: DataStructure) : DataStructure
        +hatKollision(dto: DataStructure) : boolean
        +istZeitueberlappend(startHin: int, endeHin: int, startRueck: int, endeRueck: int) : boolean
    }

    class EinseitigAlg {
        --
        +algorithmus(dto: DataStructure) : DataStructure
        +hatKollision(dto: DataStructure) : boolean
        +istZeitueberlappend(startHin: int, endeHin: int, startRueck: int, endeRueck: int) : boolean
    }

    class BeidseitigAlg {
        --
        +algorithmus(dto: DataStructure) : DataStructure
        +hatKollision(dto: DataStructure) : boolean
        +istZeitueberlappend(startHin: int, endeHin: int, startRueck: int, endeRueck: int) : boolean
    }

    EinfachAlg ..|> Algorithmus
    EinseitigAlg ..|> Algorithmus
    BeidseitigAlg ..|> Algorithmus
    BeidseitigAlg --> EinseitigAlg : nutzt
}

' Model-Package
package "model" {
    class DataStructure {
        -strecke: String[]
        -abstaende: int[]
        -start: int
        -anzahl: int
        -minDauer: int
        -hinweg: int[]
        -rueckweg: int[]
        -umstiegszeit: int
        -sicherheitszeit: int
        -kollisionen: String[]
        -wartezeitHin: int[]
        -wartezeitRueck: int[]
        -strafen: int
        -gesamtdauerHin: int
        -gesamtdauerRueck: int
        --
        +deepCopy() : DataStructure
        ..Getter & Setter..
    }
}

' IO-Package
package "io" {
    class Inputhandler {
        -dto: DataStructure
        --
        +createDto(file: File) : DataStructure
    }

    class Outputhandler {
        --
        +createOutput(dtoEinfach: DataStructure, dtoEinseitig: DataStructure, dtoBeidseitig: DataStructure, inputDatei: String) : void
        -druckeTabelle(writer: PrintWriter, dto: DataStructure) : void
        -formatZeit(minuten: int) : String
        -formatWartezeit(wartezeit: int) : String
    }

    class ExceptionHandler {
        -{static} outputDateiName: String
        --
        +{static} setInputFile(inputDatei: String) : void
        +{static} handle(e: Exception, context: String) : void
        +{static} handle(errorMessage: String) : void
    }
}

' Beziehungen
Main --> Inputhandler : verwendet
Main --> Outputhandler : verwendet
Main --> ExceptionHandler : verwendet
Main --> Algorithmus : verwendet

Algorithmus --> DataStructure : verarbeitet
Inputhandler --> DataStructure : erstellt
Outputhandler --> DataStructure : gibt aus

@enduml